# DeepSPRINT

./: .gitignore  Cargo.toml  Readme.md
benches/: microbenches.rs  my_benchmark.rs
deepfold/: Cargo.toml
deepfold/basefold/: Cargo.toml
deepfold/basefold/src/: prover.rs  verifier.rs
deepfold/batch/: Cargo.toml
deepfold/batch/benches/: bench.rs
deepfold/batch/src/: lib.rs
deepfold/deepfold/: Cargo.toml
deepfold/deepfold/benches/: bench.rs
deepfold/deepfold/src/: lib.rs  prover.rs  verifier.rs
deepfold/fri/: Cargo.toml
deepfold/fri/src/: prover.rs  verifier.rs
deepfold/matmult/: Cargo.toml
deepfold/polyfrim/: Cargo.toml
deepfold/polyfrim/src/: prover.rs  verifier.rs
deepfold/scripts/: deepfold-batching-bench.sh
deepfold/util/: Cargo.toml
deepfold/util/src/: interpolation.rs  merkle_tree.rs  query_result.rs  random_oracle.rs
deepfold/util/src/algebra/: coset.rs  field.rs  polynomial.rs
deepfold/util/src/algebra/field/: arkfield.rs  arkfield_192.rs  arkfield_256.rs  m31_ext.rs  p434.rs  p503.rs  p610.rs  p751.rs  sqisign.rs
deepfold/util/src/algebra/field/sqisign/: level_i.rs  level_iii.rs  level_v.rs
deepfold/util/src/sumcheck/: prover.rs  verifier.rs
deepfold/virgo/: Cargo.toml
deepfold/virgo/src/: prover.rs  verifier.rs
scripts/: parameter_generation.sage  parameter_generation.sage.py
src/: lib.rs  polynomials.rs  src.rs
src/polynomials/: piop_polynomials.rs
src/polynomials/piop_polynomials/: q.rs
tests/: prove_and_verify.rs
