[package]
name = "deepfold"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
util = { path = "../util" }
csv = "1.3.0"
ark-ff = "0.5.0"
ark-serialize = {version = "0.5.0", features= ["derive"]}
rand = "0.8"

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "bench"
harness = false
