[package]
name = "util"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
blake3 = "1.3"
rs_merkle = "1.3"
hex = "0.4"
ff = { version = "0.12", features = ["derive"] }
ff-derive-num = "0.2"
serde = { version = "1.0", features = ["derive"] }
num-traits = "0.2"
halo2curves = "0.8"
p3-mersenne-31 = "0.2.0"
p3-field = "0.2.0"
once_cell = "1.19"
ark-ff = "0.5.0"
ark-serialize = "0.5.0"
zeroize = "*"
